[tool.poetry]
name = "pyrepcon"
version = "0.1.0"
description = "Simple reproducible containers using Python"
authors = ["marshrossney <17361029+marshrossney@users.noreply.github.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
